<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    tools:context=".DetailUser">

    <ImageView
        android:id="@+id/img_detail_photo"
        android:layout_width="410dp"
        android:layout_height="319dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_detail_photo"
        app:layout_constraintStart_toStartOf="@+id/img_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_photo"
        tools:text="@string/users_name" />

    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/img_detail_photo"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/img_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tv_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        tools:text="@string/location" />

    <TextView
        android:id="@+id/tv_detail_flag"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_location"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_location"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_location"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/flag" />


    <TextView
        android:id="@+id/tv_detail_followers"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="52dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        tools:text="@string/followers" />

    <TextView
        android:id="@+id/tv_detail_following"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_followers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_followers"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_followers"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/following" />

    <TextView
        android:id="@+id/tv_detail_repository"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="132dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:text="@string/repository" />
</androidx.constraintlayout.widget.ConstraintLayout>